ADD_SUBDIRECTORY(lib/bitcoin)
ADD_SUBDIRECTORY(lib/network)
ADD_SUBDIRECTORY(lib/consensus)
ADD_SUBDIRECTORY(lib/database)
ADD_SUBDIRECTORY(lib/blockchain)
ADD_SUBDIRECTORY(lib/node)
ADD_SUBDIRECTORY(lib/protocol)
ADD_SUBDIRECTORY(lib/client)
ADD_SUBDIRECTORY(lib/explorer)
ADD_SUBDIRECTORY(mvsd)
ADD_SUBDIRECTORY(mvs-cli)
