FILE(GLOB_RECURSE client_SOURCES "*.cpp")

ADD_DEFINITIONS(-DBCC_STATIC=1)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-strict-aliasing")

ADD_LIBRARY(client_static STATIC ${client_SOURCES})
SET_TARGET_PROPERTIES(client_static PROPERTIES OUTPUT_NAME mvs_client)
TARGET_LINK_LIBRARIES(client_static ${Boost_LIBRARIES} ${bitcoin_LIBRARY} ${protocol_LIBRARY})
INSTALL(TARGETS client_static DESTINATION lib)

IF(ENABLE_SHARED_LIBS)
    #    ADD_DEFINITIONS(-DBCD_DLL=1)
  ADD_LIBRARY(client_shared SHARED ${client_SOURCES})
  SET_TARGET_PROPERTIES(client_shared PROPERTIES OUTPUT_NAME mvs_client)
  TARGET_LINK_LIBRARIES(client_shared ${Boost_LIBRARIES} ${bitcoin_LIBRARY} ${protocol_LIBRARY})
  INSTALL(TARGETS client_shared DESTINATION lib)
ENDIF()
