INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/lib/consensus/clone")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/lib/consensus/common")

FILE(GLOB_RECURSE consensus_SOURCES "*.cpp")

ADD_DEFINITIONS(-DHAVE_BYTESWAP_H=1 -DHAVE_DECL_BSWAP_16=1 -DHAVE_BYTESWAP_H=1
-DHAVE_DECL_BSWAP_32=1 -DHAVE_BYTESWAP_H=1 -DHAVE_DECL_BSWAP_64=1
-DHAVE_ENDIAN_H=1 -DHAVE_DECL_LE16TOH=1  -DHAVE_DECL_LE32TOH=1
-DHAVE_DECL_LE64TOH=1  -DHAVE_DECL_HTOLE16=1 -DHAVE_DECL_HTOLE32=1
-DHAVE_DECL_HTOLE64=1 -DHAVE_DECL_BE16TOH=1  -DHAVE_DECL_BE32TOH=1
-DHAVE_DECL_BE64TOH=1  -DHAVE_DECL_HTOBE16=1 -DHAVE_DECL_HTOBE32=1
-DHAVE_DECL_HTOBE64=1 )

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-strict-aliasing ")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-strict-aliasing ")

ADD_DEFINITIONS(-DBCK_STATIC=1)
ADD_LIBRARY(consensus_static STATIC ${consensus_SOURCES})
SET_TARGET_PROPERTIES(consensus_static PROPERTIES OUTPUT_NAME mvs_consensus)
TARGET_LINK_LIBRARIES(consensus_static ${Boost_LIBRARIES} )
INSTALL(TARGETS consensus_static DESTINATION lib)

IF(ENABLE_SHARED_LIBS)
    ADD_DEFINITIONS(-DBCK_DLL=1)
  ADD_LIBRARY(consensus_shared SHARED ${consensus_SOURCES})
  SET_TARGET_PROPERTIES(consensus_shared PROPERTIES OUTPUT_NAME mvs_consensus)
  TARGET_LINK_LIBRARIES(consensus_shared ${Boost_LIBRARIES})
  INSTALL(TARGETS consensus_shared DESTINATION lib)
ENDIF()
