FILE(GLOB_RECURSE network_SOURCES "*.cpp")

ADD_DEFINITIONS(-DBCT_STATIC=1)

ADD_LIBRARY(network_static STATIC ${network_SOURCES})
SET_TARGET_PROPERTIES(network_static PROPERTIES OUTPUT_NAME mvs_network)
TARGET_LINK_LIBRARIES(network_static ${Boost_LIBRARIES} )
INSTALL(TARGETS network_static DESTINATION lib)

IF(ENABLE_SHARED_LIBS)
    ADD_DEFINITIONS(-DBCT_DLL=1)
  ADD_LIBRARY(network_shared SHARED ${network_SOURCES})
  SET_TARGET_PROPERTIES(network_shared PROPERTIES OUTPUT_NAME mvs_network)
  TARGET_LINK_LIBRARIES(network_shared ${Boost_LIBRARIES})
  INSTALL(TARGETS network_shared DESTINATION lib)
ENDIF()
